# ryoku-arch

./: .gitattributes  .gitignore  .mintignore  .qmllint.ini  .woke.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  NOTICE  README.md  SECURITY.md  VERSION  boot.sh  docs.json  flake.nix  index.mdx  install.sh  recover.sh  todo.md
ryoku/apps/ryomotion/: CMakeLists.txt  ryomotion.desktop
ryoku/shell/plugin/: CMakeLists.txt  blobgroup.cpp  blobgroup.hpp  blobinvertedrect.cpp  blobmaterial.cpp  blobmaterial.hpp  blobrect.cpp  blobrect.hpp  blobshape.cpp  build.sh
shell/: .envrc  .gitignore  .shellcheckrc  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  GlobalStates.qml  Makefile  README.md  dev-binds.sh  dev-run.sh  dev-stop.sh  go.mod  ipc-surface.txt  killDialog.qml  ryokuSettings.qml  settings.qml  setup  shell.qml  waffleSettings.qml  welcome.qml
shell/.github/: FUNDING.yml  pull_request_template.md
shell/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
shell/ambxst/: ATTRIBUTION.md
shell/ambxst/config/: AGENTS.md  Config.qml  KeybindActions.js  qmldir
shell/assets/: wrap_term_launch.sh
shell/assets/applications/: ryoku-shell.desktop
shell/assets/systemd/: ryoku-shell.service
shell/brave-theme/: Cached Theme.pak  manifest.json
shell/components/: AnchorAnim.qml  Anim.qml  CAnim.qml  ConnectionHeader.qml  ConnectionInfoSection.qml  DrawerVisibilities.qml  Logo.qml  MaterialIcon.qml  PropertyRow.qml  SectionContainer.qml  SectionHeader.qml  StateLayer.qml  StyledText.qml
shell/components/containers/: StyledWindow.qml
shell/components/controls/: CircularIndicator.qml  CircularProgress.qml  CollapsibleSection.qml  CustomMouseArea.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  MenuItem.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledInputField.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  TextButton.qml  ToggleButton.qml  ToggleRow.qml  Tooltip.qml
shell/components/effects/: ColouredIcon.qml  InnerBorder.qml
shell/components/filedialog/: CurrentItem.qml  DialogButtons.qml  FolderContents.qml  HeaderBar.qml  Sidebar.qml
shell/components/images/: CachingIconImage.qml  CachingImage.qml
shell/components/misc/: CustomShortcut.qml
shell/components/widgets/: ExtraIndicator.qml
shell/dashboard/: ATTRIBUTION.md
shell/dashboard/config/: AGENTS.md  Config.qml  qmldir
shell/dashboard/scripts/: AGENTS.md  keystore.py  lockwall.py  loginlock.sh  sleep_monitor.sh  thumbgen.py  weather.sh  wf-record.sh
shell/defaults/: config.json
shell/defaults/gtk-3.0/: settings.ini
shell/defaults/gtk-4.0/: settings.ini
shell/defaults/kde/: kdeglobals
shell/defaults/matugen/: config.toml
shell/defaults/niri/: config.kdl
shell/defaults/widgets/: WIDGET-SDK.md
shell/docs/: CONFIG_SYSTEM.md  IPC.md  KEYBINDS.md  PROJECT_MAP.md  RUNTIME.md  SETUP.md  THEMING_TARGETS.md  index.md
shell/docs/readme/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md
shell/fastfetch/: lantern.txt
shell/fish/: config.fish  ryoku-greeting.sh
shell/ghostty/: config
shell/hypr/: hyprland.lua
shell/hypr/modules/: autostart.lua  binds.lua  decoration.lua  env.lua  input.lua  ryoshot.lua  window_rules.lua
shell/hypr/scripts/: cliphist-thumbs.sh  wallpaper-thumbs.sh
shell/ipc/: actions.go  daemon.go  go.mod  main.go  route_test.go  wallpaper.go
shell/kde/: kdeglobals
shell/modules/: BatteryMonitor.qml  ClipboardMaintenance.qml  ConfigToasts.qml  IdleMonitors.qml  LockBridge.qml  PluginMenu.qml  Shortcuts.qml  WallpaperRotation.qml  WeatherUnitSync.qml
shell/modules/altSwitcher/: AltSwitcher.qml
shell/modules/areapicker/: AreaPicker.qml  Picker.qml
shell/modules/background/: Background.qml  DesktopClock.qml  DesktopWidget.qml  Visualiser.qml  Wallpaper.qml
shell/modules/bar/: ActiveWindow.qml  Bar.qml  BarContent.qml  BarGroup.qml  BarTaskbarButton.qml  BarTaskbarPreview.qml  BarTaskbarWindowPreview.qml  BarWrapper.qml  BatteryIndicator.qml  BatteryPopup.qml  ClockWidget.qml  LeftSidebarButton.qml  Media.qml  NotificationUnreadCount.qml  Resource.qml  SeamlessBarShape.qml  SecPulseIndicator.qml  ShellUpdateIndicator.qml  StyledPopup.qml  SysTray.qml  SysTrayMenu.qml  (+4 more)
shell/noctalia/: ATTRIBUTION.md
shell/plugin/: CMakeLists.txt
shell/rice/: README.md  branding-replacements.tsv  config-overrides.json  shell.json
shell/scripts/: add-plugin.py  capture-windows.fish  capture-windows.sh  close-window.sh  launch-terminal.sh  niri-config.py  parse_niri_keybinds.py  qml-lint-conventions.py  quickshell-env.sh  release.sh  render_keybindings_docs.py  restart-shell.sh  ryoku  ryoku-cmd-audio-default  ryoku-cmd-audio-jack  ryoku-keybinds  ryoku-reload-hyprland  ryoku-settings-about  ryoku-shell  ryoku-shell-doctor  ryoku-shell-profile  scan-plugins.py  test-local-distribution.sh  tiling-cycle.fish  ytmusic_oauth_setup.py
shell/services/: Ai.qml  AppCatalog.qml  AppLauncher.qml  AppSearch.qml  Audio.qml  AwwwBackend.qml  BarDesign.qml  Battery.qml  Booru.qml  Brightness.qml  Cava.qml  Colours.qml  CompositorService.qml  CustomWidgets.qml  FirstRunExperience.qml  FontSyncService.qml  GameMode.qml  Gaming.qml  GlobalActions.qml  GowallService.qml  Hypr.qml  Idle.qml  IdleInhibitor.qml  Keybinds.qml  LauncherSearch.qml  LockThemes.qml  LyricsService.qml  MaterialThemeLoader.qml  MinimizedWindows.qml  MprisController.qml  Network.qml  NetworkUsage.qml  NiriKeybinds.qml  NiriService.qml  Nmcli.qml  Notepad.qml  Notes.qml  NotifData.qml  Notifications.qml  Notifs.qml  (+34 more)
shell/settingsgui/: ATTRIBUTION.md
shell/translations/: ar_SA.json  de_DE.json  en_US.json  es_AR.json  fr_FR.json  he_HE.json  hi_IN.json  it_IT.json  ja_JP.json  ko_KR.json  pt_BR.json  ru_RU.json  uk_UA.json  vi_VN.json  zh_CN.json
shell/utils/: Icons.qml  NetworkConnection.qml  Paths.qml  SysInfo.qml
(+4796 files in other folders)
